--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -124,9 +124,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Windows/MainWindow.designer.cs">
-      <DependentUpon>Windows/MainWindow.cs</DependentUpon>
-    </Compile>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="AppDelegate.designer.cs">
@@ -185,6 +182,16 @@
     <Compile Include="Controls\MPfmIsPlayingTableCellView.cs" />
     <Compile Include="Windows\MainWindow.cs" />
     <Compile Include="Windows\Controllers\MainWindowController.cs" />
+    <Compile Include="Windows\MainWindow.designer.cs">
+      <DependentUpon>Windows\MainWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Controllers\EditLoopWindowController.cs" />
+    <Compile Include="Windows\EditLoopWindow.cs" />
+    <Compile Include="Windows\EditLoopWindow.designer.cs">
+      <DependentUpon>EditLoopWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Controllers\EditMarkerWindowController.cs" />
+    <Compile Include="Windows\EditMarkerWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
@@ -195,6 +202,8 @@
     <InterfaceDefinition Include="Windows\XIB\SplashWindow.xib" />
     <InterfaceDefinition Include="Windows\XIB\MainWindow.xib" />
     <InterfaceDefinition Include="Windows\XIB\MainMenu.xib" />
+    <InterfaceDefinition Include="Windows\XIB\EditLoopWindow.xib" />
+    <InterfaceDefinition Include="Windows\XIB\EditMarkerWindow.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
