--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -75,6 +75,8 @@
     <Reference Include="System.Data.SQLite">
       <HintPath>..\MPfm.Library\Lib\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
@@ -113,6 +115,13 @@
     <Compile Include="Presenters\SplashPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
     <Compile Include="Views\ISplashView.cs" />
+    <Compile Include="Config\MPfmConfig.cs" />
+    <Compile Include="Config\MPfmAudioConfig.cs" />
+    <Compile Include="Config\MPfmControlsConfig.cs" />
+    <Compile Include="Config\MPfmTableViewConfig.cs" />
+    <Compile Include="Config\MPfmTableViewColumnConfig.cs" />
+    <Compile Include="Config\MPfmWindowConfig.cs" />
+    <Compile Include="Config\MPfmWindowsConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -143,6 +152,7 @@
     <Folder Include="Helpers\" />
     <Folder Include="Services\Interfaces\" />
     <Folder Include="Presenters\Interfaces\" />
+    <Folder Include="Config\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
