Added the IPlayerService/PlayerService classes. The Player is no longer accessible through PlayerPresenter and thus completely isolated from UI.
Related to issue #396.


git-svn-id: http://hamster-svn/svn/repos/base@617 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -122,6 +122,8 @@
     <Compile Include="Config\MPfmTableViewColumnConfig.cs" />
     <Compile Include="Config\MPfmWindowConfig.cs" />
     <Compile Include="Config\MPfmWindowsConfig.cs" />
+    <Compile Include="Services\PlayerService.cs" />
+    <Compile Include="Services\Interfaces\IPlayerService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
