Added IEffectsPresenter/EffectsPresenter. Added IEffectsView. Bound presenter and view to EffectsWindowController. Added PlaylistWindowController, EffectsWindowController and PreferencesWindowController to the MainWindowController constructor. There is still a lot of work to do on these classes before they're ready.
Related to issue #381, issue #397 and issue #398.

git-svn-id: http://hamster-svn/svn/repos/base@618 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -124,6 +124,9 @@
     <Compile Include="Config\MPfmWindowsConfig.cs" />
     <Compile Include="Services\PlayerService.cs" />
     <Compile Include="Services\Interfaces\IPlayerService.cs" />
+    <Compile Include="Presenters\Interfaces\IEffectsPresenter.cs" />
+    <Compile Include="Views\IEffectsView.cs" />
+    <Compile Include="Presenters\EffectsPresenter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
