Added IPreferencesPresenter/PreferencesPresenter. Added IPreferencesView. Bound presenter and view to PreferencesWindowController. There is still a lot of work to do on these classes before they're ready.
Related to issue #381, issue #399 and issue #400.

git-svn-id: http://hamster-svn/svn/repos/base@619 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -127,6 +127,9 @@
     <Compile Include="Presenters\Interfaces\IEffectsPresenter.cs" />
     <Compile Include="Views\IEffectsView.cs" />
     <Compile Include="Presenters\EffectsPresenter.cs" />
+    <Compile Include="Views\IPreferencesView.cs" />
+    <Compile Include="Presenters\Interfaces\IPreferencesPresenter.cs" />
+    <Compile Include="Presenters\PreferencesPresenter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
