Added IPlaylistPresenter/PlaylistPresenter. Added IPlaylistView. Bound presenter and view to PlaylistWindowController on OS X. There is still a lot of work to do on these classes before they're ready.
Related to issue #381, issue #401 and issue #402.


git-svn-id: http://hamster-svn/svn/repos/base@620 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -130,6 +130,9 @@
     <Compile Include="Views\IPreferencesView.cs" />
     <Compile Include="Presenters\Interfaces\IPreferencesPresenter.cs" />
     <Compile Include="Presenters\PreferencesPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IPlaylistPresenter.cs" />
+    <Compile Include="Views\IPlaylistView.cs" />
+    <Compile Include="Presenters\PlaylistPresenter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
