Added controls to the PreferencesWindow in OS X. Added the EQPresetHelper to load/save presets.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@621 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Presenters\Interfaces\IPlaylistPresenter.cs" />
     <Compile Include="Views\IPlaylistView.cs" />
     <Compile Include="Presenters\PlaylistPresenter.cs" />
+    <Compile Include="Helpers\EQPresetHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
