Added new Pitch Shifting panel to OS X. Readjusted all panels. Updated the Time Shifting panel with more options.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@625 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -307,6 +307,7 @@
     <Content Include="Resources\16x16\fam\exclamation.png" />
     <Content Include="Resources\16x16\fam\cancel.png" />
     <Content Include="Resources\16x16\fam\shape_align_middle.png" />
+    <Content Include="Resources\16x16\fam\time.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
