Renamed all image resources with size. Replaced some icons by famfamfam icons.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@626 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -308,6 +308,9 @@
     <Content Include="Resources\16x16\fam\cancel.png" />
     <Content Include="Resources\16x16\fam\shape_align_middle.png" />
     <Content Include="Resources\16x16\fam\time.png" />
+    <Content Include="Resources\16x16\fam\pencil.png" />
+    <Content Include="Resources\16x16\fam\accept.png" />
+    <Content Include="Resources\16x16\fam\add.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
