Added TinyMessenger to the solution. Added PlayerStatusMessage and LibraryBrowserItemSelectedMessage. LibraryBrowserPresenter is no longer dependent on SongBrowserPresenter.
Related to issue #403.

git-svn-id: http://hamster-svn/svn/repos/base@634 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -134,6 +134,11 @@
     <Compile Include="Views\IPlaylistView.cs" />
     <Compile Include="Presenters\PlaylistPresenter.cs" />
     <Compile Include="Helpers\EQPresetHelper.cs" />
+    <Compile Include="TinyIoC\TinyIoC.cs" />
+    <Compile Include="TinyIoC\TinyMessenger.cs" />
+    <Compile Include="Messages\PlayerStatusMessage.cs" />
+    <Compile Include="Messages\PlayerStatusType.cs" />
+    <Compile Include="Messages\LibraryBrowserItemSelectedMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -165,6 +170,7 @@
     <Folder Include="Services\Interfaces\" />
     <Folder Include="Presenters\Interfaces\" />
     <Folder Include="Config\" />
+    <Folder Include="Messages\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
