--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -139,6 +139,8 @@
     <Compile Include="Messages\PlayerStatusMessage.cs" />
     <Compile Include="Messages\PlayerStatusType.cs" />
     <Compile Include="Messages\LibraryBrowserItemSelectedMessage.cs" />
+    <Compile Include="Messages\SongBrowserItemDoubleClickedMessage.cs" />
+    <Compile Include="Messages\LibraryBrowserItemDoubleClickedMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
