ViewFactory now creates the MainView. Cleaned up presenters.
git-svn-id: http://hamster-svn/svn/repos/base@638 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Presenters\BasePresenter.cs" />
     <Compile Include="Presenters\Interfaces\IBasePresenter.cs" />
     <Compile Include="Views\IBaseView.cs" />
+    <Compile Include="Views\IMainView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
