Now using ViewFactory for creating Main View. Added a few ViewModels. PlayerPresenter: Bug fix crash when quitting the application; the Dispose method is now back. More bug fixes on the Linux version.
Related to issue #361 and issue #382.

git-svn-id: http://hamster-svn/svn/repos/base@639 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -146,6 +146,9 @@
     <Compile Include="Presenters\Interfaces\IBasePresenter.cs" />
     <Compile Include="Views\IBaseView.cs" />
     <Compile Include="Views\IMainView.cs" />
+    <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\SplashViewModel.cs" />
+    <Compile Include="ViewModels\LibraryBrowserViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -178,6 +181,7 @@
     <Folder Include="Presenters\Interfaces\" />
     <Folder Include="Config\" />
     <Folder Include="Messages\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
