GTK: Added BaseWindow. Added NavigationManager, which is a new way to manage the view creation and transition. Added more events/methods to IBaseView to manage the view creation and destruction. Updated GTK project with new NavigationManager.
Related to issue #404.

git-svn-id: http://hamster-svn/svn/repos/base@642 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -98,6 +98,7 @@
     <Compile Include="gtk-gui\MPfm.GTK.PreferencesWindow.cs" />
     <Compile Include="gtk-gui\MPfm.GTK.SplashWindow.cs" />
     <Compile Include="Windows\SplashWindow.cs" />
+    <Compile Include="Windows\BaseWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
