Updated NavigationManager as an abstract class with very basic additions on every platform (ex: GtkNavigationManager) to create the views in a UI thread. Updated GTK implementation.
Related to issue #382 and issue #404.

git-svn-id: http://hamster-svn/svn/repos/base@643 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -99,6 +99,7 @@
     <Compile Include="gtk-gui\MPfm.GTK.SplashWindow.cs" />
     <Compile Include="Windows\SplashWindow.cs" />
     <Compile Include="Windows\BaseWindow.cs" />
+    <Compile Include="Classes\GtkNavigationManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -163,6 +164,7 @@
     <Folder Include="Lib\x86\" />
     <Folder Include="Lib\x64\" />
     <Folder Include="Windows\" />
+    <Folder Include="Classes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon48.png">
