Mac: Added MacNavigationManager. Mac: Added BaseWindowController; all window controllers now inherit from this base class. Mac: The application now seems to boot correctly after introducing the NavigationManager.
Related to issue #381 and issue #404.

git-svn-id: http://hamster-svn/svn/repos/base@644 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -192,6 +192,8 @@
     </Compile>
     <Compile Include="Windows\Controllers\EditMarkerWindowController.cs" />
     <Compile Include="Windows\EditMarkerWindow.cs" />
+    <Compile Include="Windows\Controllers\BaseWindowController.cs" />
+    <Compile Include="Classes\MacNavigationManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
@@ -328,6 +330,7 @@
     <Folder Include="Resources\16x16\fam\" />
     <Folder Include="Resources\16x16\tango\" />
     <Folder Include="Resources\32x32\tango\" />
+    <Folder Include="Classes\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
