Mac: Readded splash/main window fade in/out. Mac: BaseWindowController now manages view destruction and view show/hide correctly. Mac: Added MPfmWindowDelegate to manage window close events. NavigationManager: Now handling main and splash view destroy.
Related to issue #381 and issue #404.


git-svn-id: http://hamster-svn/svn/repos/base@647 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Windows\EditMarkerWindow.cs" />
     <Compile Include="Windows\Controllers\BaseWindowController.cs" />
     <Compile Include="Classes\MacNavigationManager.cs" />
+    <Compile Include="Classes\MPfmWindowDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
